fixed user messages

--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
     <div id="overlay">
       <button id="start-game">Start New Game</button>
     </div>
-    <div id="nice-work">
-      <h2 class="user-feedback-text">Nice Work!</h2>
-    </div>
-    <div id="try-again">
-      <h2 class="user-feedback-text">Try Again</h2>
+    <div id="user-feedback-frame">
+      <div id="nice-work">
+        <h2 class="user-feedback-text">Nice Work!</h2>
+      </div>
+      <div id="try-again">
+        <h2 class="user-feedback-text">Try Again</h2>
+      </div>
     </div>
     <script src="app.js"></script>
   </body>
