--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
     </div>
     <div id="overlay">
+      <div id="endgame-message" class="user-feedback-text"></div>
       <button id="start-game">Start New Game</button>
     </div>
     <div id="user-feedback-frame">
