Added endgame message and screenShot

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
     <div id="game">
 
     </div>
-    <div id="overlay">
+    <div id="endame-overlay" class="overlay">
+      <h2 id="congratulations">Congratulations!!</h2>
+    </div>
+    <div id="overlay" class="overlay">
       <button id="start-game">Start New Game</button>
     </div>
     <div id="user-feedback-frame">
